scripts/compilation/annotator/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8.txt
../annotator/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:407: error: annotation type not applicable to this kind of declaration
  @Nullable private ParameterDescription getPrefixDescriptionFor(String arg) {
  ^
../annotator/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:926: error: annotation type not applicable to this kind of declaration
  @Nullable public String getMainParameterDescription() {
  ^
../annotator/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:992: error: annotation type not applicable to this kind of declaration
  @Nullable public String getCommandDescription(String commandName) {
  ^
../annotator/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1201: error: annotation type not applicable to this kind of declaration
  @Nullable public <T> Class<? extends IStringConverter<T>> findConverter(Class<T> cls) {
  ^
../annotator/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1313: error: annotation type not applicable to this kind of declaration
  @Nullable private IStringConverter<?> instantiateConverter(String optionName,
  ^
../annotator/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1463: error: annotation type not applicable to this kind of declaration
  @Nullable private JCommander findCommandByAlias(String commandOrAlias) {
  ^
../annotator/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/ResourceBundle.java:33: warning: [dep-ann] deprecated item is not annotated with @Deprecated
public @interface ResourceBundle {
        ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
1 warning
